--- a/translations/ru/afk-manager.phrases.txt
+++ b/translations/ru/afk-manager.phrases.txt
@@ -24,4 +24,9 @@
     {
         "ru"    "Вы кикнуты за бездействие"
     }
+
+    "Afk status"
+    {
+        "ru"    "Игрок {1} бездействует {2} сек."
+    }
 }
