--- a/translations/ru/afk-manager.phrases.txt
+++ b/translations/ru/afk-manager.phrases.txt
@@ -29,4 +29,9 @@
     {
         "ru"    "Игрок {1} бездействует {2} сек."
     }
+
+    "Reset seconds"
+    {
+        "ru"    "Сброшено время бездействия для игрока {1}"
+    }
 }
