Remove redundant words from translations

--- a/translations/afk-manager.phrases.txt
+++ b/translations/afk-manager.phrases.txt
@@ -20,7 +20,7 @@
     "Player moved to spectators"
     {
         "#format"   "{1:N}"
-        "en"    "Player {wheat}{1}{default} moved to spectators for inactivity"
+        "en"    "Player {wheat}{1}{default} moved to spectators"
     }
 
     "You are kicked for inactivity"
