Improve the format for showing the remaining time in notifications

--- a/translations/ru/afk-manager.phrases.txt
+++ b/translations/ru/afk-manager.phrases.txt
@@ -2,12 +2,12 @@
 {
     "Inactive player"
     {
-        "ru"    "Начните двигаться, иначе через {wheat}{1}{default} сек. вы будете перемещены в наблюдатели"
+        "ru"    "Начните двигаться, иначе через {1} вы будете перемещены в наблюдатели"
     }
 
     "Inactive spectator"
     {
-        "ru"    "Вернитесь в игру, иначе через {wheat}{1}{default} сек. вы будете кикнуты"
+        "ru"    "Вернитесь в игру, иначе через {1} вы будете кикнуты"
     }
 
     "Player moved to spectators"
@@ -28,5 +28,15 @@
     "Reset seconds"
     {
         "ru"    "Сброшено время бездействия для игрока {1}"
+    }
+
+    "seconds"
+    {
+        "ru"    "{wheat}{1}{default} сек."
+    }
+
+    "minutes seconds"
+    {
+        "ru"    "{wheat}{1}{default} мин. и {wheat}{2}{default} сек."
     }
 }
