Show message when player is kicked

--- a/translations/ru/afk-manager.phrases.txt
+++ b/translations/ru/afk-manager.phrases.txt
@@ -15,6 +15,11 @@
         "ru"    "Игрок {wheat}{1}{default} перемещен в наблюдатели"
     }
 
+    "Player kicked"
+    {
+        "ru"    "Игрок {wheat}{1}{default} кикнут"
+    }
+
     "You are kicked for inactivity"
     {
         "ru"    "Вы кикнуты за бездействие"
