--- a/translations/afk-manager.phrases.txt
+++ b/translations/afk-manager.phrases.txt
@@ -23,6 +23,12 @@
         "en"    "Player {wheat}{1}{default} moved to spectators"
     }
 
+    "Player kicked"
+    {
+        "#format"   "{1:N}"
+        "en"    "Player {wheat}{1}{default} kicked"
+    }
+
     "You are kicked for inactivity"
     {
         "en"    "You are kicked for inactivity"
